Updating allocation
